Update README with FlashCardApp demo details
Added details about the FlashCardApp demo branch, including notes and requirements for compilation.