@@ -1,1 +1,21 @@
 # TopScrum-CPSC362-CSUF
+
+# FlashCardApp – Demo Branch
+
+This branch (`main`) contains the **demo version** of the FlashCardApp.  
+It is intended primarily as a **proof of concept** and demonstration of core functionality.
+
+## Notes
+- This branch is **not** the full UML-driven implementation — it’s a simplified demo.
+- Future development (e.g., UML class associations, persistence, UI refinements) is happening in feature branches such as `umlFlow`.
+
+## Requirements
+To compile and run the demo, you must have **JavaFX installed** and available on your system.
+
+Example compile command:
+```bash
+javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml *.java
+
+Example compile command:
+```bash
+java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml MainApp
